package Birds;

public class Crow extends Bird implements Eat,Fly,SaySomething{
    public void eat(){

    }
    public void fly(){

    }
    public String getColor(String color){
        return color;
    }
    public void saySomething(){

    }
}
