package Birds;

public class CrowEagleFlyingBehaviour implements FlyingBehaviour {
    public void flyingBehaviour(){

    }
}
