package Birds;

public class Dolphin extends Bird implements SaySomething,Eat {
    public void eat(){

    }
    public void saySomething(){

    }
}
