package Birds;

public interface FlyingBehaviour {
    public void flyingBehaviour();
}
