package Birds;

import java.util.ArrayList;
import java.util.List;

public class Main {
    public static void main(String[] args) {
        List<Fly> allFlyingBirds = new ArrayList<>();

    }
}
