package Birds;

public class PigeonSparrowFlyingBehaviour implements FlyingBehaviour {
    public void flyingBehaviour(){

    }
}

