package Birds;

public interface SaySomething {
    public void saySomething();
}
