package Birds;

public class Sparrow extends Bird implements Eat,Fly{
    public void eat(){

    }
    public void fly(){

    }
}
